--- a/app/src/main/res/layout/activity_offline_directory.xml
+++ b/app/src/main/res/layout/activity_offline_directory.xml
@@ -5,8 +5,10 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
 android:background="@drawable/login"
    >
+
 
 
     <Spinner
@@ -16,6 +18,7 @@ android:background="@drawable/login"
     android:layout_marginTop="12dp"
     android:layout_width="match_parent"
     android:layout_alignParentRight="true"
+    android:layout_below="@+id/toolbar"
     android:layout_alignParentEnd="true" />
 
     <Spinner
