--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -7,6 +7,10 @@
     android:background="@drawable/login"
     android:orientation="vertical"
     tools:context=".SOS">
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
